--- a/site/static/less/dl.less
+++ b/site/static/less/dl.less
@@ -14,12 +14,19 @@ dl {
   &.dl-params {
     dt, dd {
       border-top: 1px solid @gray2;
-      padding: 5px 0px 20px 0px;
       text-align: left;
 
       strong {
         color: @black;
       }
+    }
+    dd {
+      padding: 5px 0px 20px 0px;
+
+    }
+    dt{
+      padding: 5px 0px 19px 0px;
+
     }
 
     dt code {
